src/test/deca/context/invalid/type-unary-minus-bool.context
type-unary-minus-bool.deca:11: